--- a/app/src/main/res/layout/dialog_song.xml
+++ b/app/src/main/res/layout/dialog_song.xml
@@ -19,6 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/bu1"
         android:hint="@string/hint_title"
+        android:imeOptions="actionNext"
         android:inputType="textCapSentences"
         android:paddingLeft="@dimen/bu1"
         android:textColor="@color/black"
@@ -29,6 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/hint_author"
+        android:imeOptions="actionDone"
         android:inputType="textCapWords"
         android:paddingLeft="@dimen/bu1"
         android:textColor="@color/black"
