--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,63 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:titleTextColor="@color/white" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize"
+        android:orientation="vertical">
+
+        <RelativeLayout
+            android:id="@+id/view_search"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/bu5_5"
+            android:visibility="gone">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="@dimen/bu0_5"
+                android:layout_marginLeft="@dimen/bu0_5"
+                android:layout_marginRight="@dimen/bu0_5"
+                android:layout_marginTop="@dimen/bu1"
+                android:background="@drawable/shape_search_background"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="@dimen/bu2"
+                    android:layout_height="@dimen/bu2"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="@dimen/bu1_5"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/icon_search" />
+
+                <EditText
+                    android:id="@+id/field_search"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="@dimen/bu1"
+                    android:background="@null"
+                    android:backgroundTint="@color/white"
+                    android:hint="@string/hint_search"
+                    android:imeOptions="actionDone"
+                    android:inputType="textCapSentences"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/greyEE"
+                    android:textCursorDrawable="@null"
+                    android:textSize="@dimen/text_size_30px" />
+            </LinearLayout>
+        </RelativeLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/list_songs"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:paddingBottom="@dimen/bu0_33"
+            android:paddingTop="@dimen/bu0_33" />
+    </LinearLayout>
+
+
     <TextView
         android:id="@+id/text_no_songs"
         android:layout_width="wrap_content"
@@ -28,14 +85,5 @@
         android:text="@string/no_songs"
         android:textColor="@color/white"
         android:textSize="@dimen/text_size_42px" />
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/list_songs"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="?attr/actionBarSize"
-        android:clipToPadding="false"
-        android:paddingBottom="@dimen/bu0_5"
-        android:paddingTop="@dimen/bu0_5" />
 
 </RelativeLayout>
