--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
 
     <color name="white">#FFFFFF</color>
     <color name="white_15">#26FFFFFF</color>
+    <color name="white_20">#33FFFFFF</color>
     <color name="dark_red_30">#4D3C010B</color>
     <color name="dark_red_50">#803C010B</color>
     <color name="black_30">#4A000000</color>
