--- a/app/src/main/res/layout/dialog_song.xml
+++ b/app/src/main/res/layout/dialog_song.xml
@@ -36,6 +36,46 @@
         android:textColor="@color/black"
         android:textSize="@dimen/text_size_30px" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/bu1"
+        android:text="@string/song_key"
+        android:textColor="@color/black"
+        android:textSize="@dimen/text_size_30px" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/bu0_25">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/black" />
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="@dimen/bu1"
+            android:layout_alignParentLeft="true"
+            android:background="@color/black" />
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="@dimen/bu1"
+            android:layout_alignParentRight="true"
+            android:background="@color/black" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/list_keys"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/bu0_25"
+            android:paddingLeft="@dimen/bu0_25"
+            android:paddingRight="@dimen/bu0_25" />
+    </RelativeLayout>
+
     <Button
         android:id="@+id/button_ok"
         android:layout_width="match_parent"
