--- a/app/src/main/res/layout/list_item_song.xml
+++ b/app/src/main/res/layout/list_item_song.xml
@@ -16,20 +16,31 @@
             android:layout_width="@dimen/bu5"
             android:layout_height="@dimen/bu5">
 
-            <ImageView
-                android:layout_width="@dimen/bu3"
-                android:layout_height="@dimen/bu3"
+            <TextView
+                android:id="@+id/text_key"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:scaleType="fitXY"
-                android:src="@drawable/icon_note" />
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_size_80px"
+                android:textStyle="bold" />
         </RelativeLayout>
+
+        <View
+            android:id="@+id/view_separator"
+            android:layout_width="1dp"
+            android:layout_height="@dimen/bu3_5"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/icon_song"
+            android:background="@color/white" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:layout_marginLeft="@dimen/bu1"
             android:layout_marginRight="@dimen/bu3"
-            android:layout_toRightOf="@+id/icon_song"
+            android:layout_toRightOf="@+id/view_separator"
             android:orientation="vertical">
 
             <TextView
