Added settings page

--- a/app/src/main/res/menu/menu_main_activity.xml
+++ b/app/src/main/res/menu/menu_main_activity.xml
@@ -1,3 +1,4 @@
+
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -13,18 +14,7 @@
         android:title="@string/menu_add_song"
         app:showAsAction="always" />
     <item
-        android:id="@+id/action_import_songs"
-        android:icon="@drawable/icon_import"
-        android:title="@string/menu_import_songs"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/action_export_songs"
-        android:icon="@drawable/icon_export"
-        android:title="@string/menu_export_songs"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/action_credits"
-        android:icon="@drawable/icon_credits"
-        android:title="@string/menu_credits"
+        android:id="@+id/action_settings"
+        android:title="@string/menu_settings"
         app:showAsAction="never" />
 </menu>
