--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,9 +15,10 @@
     <color name="dark_purple">#642589</color>
     <color name="red">#FF0000</color>
     <color name="blue">#0000FF</color>
+    <color name="greyAA">#AAAAAA</color>
+    <color name="greyCC">#CCCCCC</color>
     <color name="greyDD">#DDDDDD</color>
     <color name="greyEE">#EEEEEE</color>
-    <color name="greyAA">#AAAAAA</color>
     <color name="grey77">#777777</color>
     <color name="gold">#e0d62a</color>
     <color name="gold2">#e0bb2a</color>
