--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -16,7 +16,7 @@
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:title="@string/menu_settings"
+        app:title="@string/settings_activity_text_settings"
         app:titleTextColor="@color/white" />
 
     <ScrollView
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/bu1_5"
                 android:layout_marginTop="@dimen/bu2"
-                android:text="@string/settings_backup_restore"
+                android:text="@string/settings_activity_text_backup_restore"
                 android:textColor="@color/black"
                 android:textSize="@dimen/text_size_30px"
                 android:textStyle="bold" />
@@ -51,7 +51,7 @@
             <RelativeLayout
                 android:id="@+id/view_backup"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/bu4"
+                android:layout_height="@dimen/bu5"
                 android:background="@drawable/selector_settings_item"
                 android:clickable="true">
 
@@ -68,7 +68,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="@dimen/bu5"
-                    android:text="@string/settings_backup"
+                    android:text="@string/settings_activity_text_backup"
                     android:textColor="@color/black"
                     android:textSize="@dimen/text_size_36px" />
 
@@ -84,7 +84,7 @@
             <RelativeLayout
                 android:id="@+id/view_restore"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/bu4"
+                android:layout_height="@dimen/bu5"
                 android:background="@drawable/selector_settings_item"
                 android:clickable="true">
 
@@ -101,7 +101,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="@dimen/bu5"
-                    android:text="@string/settings_restore"
+                    android:text="@string/settings_activity_text_restore"
                     android:textColor="@color/black"
                     android:textSize="@dimen/text_size_36px" />
 
@@ -119,7 +119,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/bu1_5"
                 android:layout_marginTop="@dimen/bu2"
-                android:text="@string/settings_general_settings"
+                android:text="@string/settings_activity_text_general_settings"
                 android:textColor="@color/black"
                 android:textSize="@dimen/text_size_30px"
                 android:textStyle="bold" />
@@ -135,7 +135,7 @@
             <RelativeLayout
                 android:id="@+id/view_rate_app"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/bu4"
+                android:layout_height="@dimen/bu5"
                 android:background="@drawable/selector_settings_item"
                 android:clickable="true">
 
@@ -152,7 +152,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="@dimen/bu5"
-                    android:text="@string/settings_rate_app"
+                    android:text="@string/settings_activity_text_rate_app"
                     android:textColor="@color/black"
                     android:textSize="@dimen/text_size_36px" />
 
@@ -168,7 +168,7 @@
             <RelativeLayout
                 android:id="@+id/view_credits"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/bu4"
+                android:layout_height="@dimen/bu5"
                 android:background="@drawable/selector_settings_item"
                 android:clickable="true">
 
@@ -185,7 +185,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="@dimen/bu5"
-                    android:text="@string/credits"
+                    android:text="@string/settings_activity_text_credits"
                     android:textColor="@color/black"
                     android:textSize="@dimen/text_size_36px" />
 
