--- a/app/src/main/res/layout/dialog_song.xml
+++ b/app/src/main/res/layout/dialog_song.xml
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/bu1"
-        android:hint="@string/hint_title"
+        android:hint="@string/song_dialog_hint_title"
         android:imeOptions="actionNext"
         android:inputType="textCapSentences"
         android:paddingLeft="@dimen/bu1"
@@ -29,7 +29,7 @@
         android:id="@+id/field_author"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/hint_author"
+        android:hint="@string/song_dialog_hint_author"
         android:imeOptions="actionDone"
         android:inputType="textCapWords"
         android:paddingLeft="@dimen/bu1"
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/bu1"
-        android:text="@string/song_key"
+        android:text="@string/song_dialog_text_key"
         android:textColor="@color/black"
         android:textSize="@dimen/text_size_30px" />
 
