--- a/app/src/main/res/layout/dialog_note_picker.xml
+++ b/app/src/main/res/layout/dialog_note_picker.xml
@@ -25,7 +25,7 @@
                 android:layout_marginLeft="@dimen/bu0_5"
                 android:layout_marginRight="@dimen/bu0_25"
                 android:layout_weight="1"
-                android:hint="@string/text_syllable"
+                android:hint="@string/note_picker_dialog_hint_syllable"
                 android:imeOptions="actionDone"
                 android:layout_gravity="center"
                 android:inputType="textVisiblePassword"
@@ -43,7 +43,7 @@
                 android:background="@drawable/selector_note_picker_button"
                 android:button="@null"
                 android:gravity="center"
-                android:text="@string/checkbox_show_bendings"
+                android:text="@string/note_picker_dialog_button_show_bendings"
                 android:textColor="@color/white"
                 android:textSize="@dimen/text_size_30px" />
 
@@ -56,7 +56,7 @@
                 android:background="@drawable/selector_note_picker_button"
                 android:clickable="true"
                 android:gravity="center"
-                android:text="@string/button_delete"
+                android:text="@string/note_picker_dialog_button_delete"
                 android:textColor="@color/white"
                 android:textSize="@dimen/text_size_30px" />
         </LinearLayout>
