--- a/app/src/main/res/menu/menu_song_options.xml
+++ b/app/src/main/res/menu/menu_song_options.xml
@@ -3,11 +3,11 @@
     <item
         android:id="@+id/action_edit_song"
         android:icon="@drawable/icon_edit"
-        android:title="@string/menu_edit"
+        android:title="@string/song_activity_menu_edit"
         app:actionLayout="@layout/list_item_menu" />
     <item
         android:id="@+id/action_delete_song"
         android:icon="@drawable/icon_delete"
-        android:title="@string/menu_delete"
+        android:title="@string/song_activity_menu_delete"
         app:actionLayout="@layout/list_item_menu" />
 </menu>
