--- a/app/src/main/res/menu/menu_main_activity.xml
+++ b/app/src/main/res/menu/menu_main_activity.xml
@@ -1,15 +1,14 @@
-
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.mivas.myharmonicasongs.MainActivity">
     <item
-        android:id="@+id/search_song_action"
+        android:id="@+id/action_search_song"
         android:icon="@drawable/icon_search2"
         android:title="@string/main_activity_menu_search"
         app:showAsAction="always" />
     <item
-        android:id="@+id/add_song_action"
+        android:id="@+id/action_add_song"
         android:icon="@drawable/icon_plus"
         android:title="@string/main_activity_menu_add_song"
         app:showAsAction="always" />
