--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -58,6 +58,8 @@
     <dimen name="text_size_26px">13sp</dimen>
     <dimen name="text_size_28px">14sp</dimen>
     <dimen name="text_size_30px">15sp</dimen>
+    <dimen name="text_size_32px">16sp</dimen>
+    <dimen name="text_size_34px">17sp</dimen>
     <dimen name="text_size_36px">18sp</dimen>
     <dimen name="text_size_40px">20sp</dimen>
     <dimen name="text_size_42px">21sp</dimen>
