Finished adding audio files

--- a/app/src/main/res/layout/activity_song.xml
+++ b/app/src/main/res/layout/activity_song.xml
@@ -32,7 +32,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:background="@color/greyDD"
+                android:background="@color/greyEE"
                 android:layout_height="@dimen/bu6">
 
                 <ImageView
