--- a/app/src/main/res/menu/menu_song_activity.xml
+++ b/app/src/main/res/menu/menu_song_activity.xml
@@ -10,9 +10,15 @@
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/action_add_instrumental"
-        android:title="@string/song_activity_menu_add_instrumental"
+        android:id="@+id/action_add_audio_file"
+        android:title="@string/song_activity_menu_add_audio_file"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_remove_audio_file"
+        android:title="@string/song_activity_menu_remove_audio_file"
+        app:showAsAction="never" />
+
     <item
         android:id="@+id/action_customize"
         android:title="@string/song_activity_menu_customize"
