--- a/app/src/main/res/layout/dialog_reset_customizations.xml
+++ b/app/src/main/res/layout/dialog_reset_customizations.xml
@@ -1,8 +1,8 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    android:orientation="vertical"
     android:padding="@dimen/bu1">
 
     <TextView
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:layout_gravity="center_horizontal"
+        android:layout_centerHorizontal="true"
         android:textColor="@color/black"
         android:text="@string/reset_customizations_dialog_title"
         android:textSize="@dimen/text_size_42px" />
@@ -19,6 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/bu4"
         android:layout_marginTop="@dimen/bu2"
+        android:layout_below="@+id/text_title"
         android:orientation="horizontal">
 
         <Button
@@ -45,4 +46,4 @@
     </LinearLayout>
 
 
-</LinearLayout>
+</RelativeLayout>
