--- a/app/src/main/res/layout/dialog_restore_warning.xml
+++ b/app/src/main/res/layout/dialog_restore_warning.xml
@@ -1,8 +1,8 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    android:orientation="vertical"
     android:padding="@dimen/bu1">
 
     <TextView
@@ -18,6 +18,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/bu4"
+        android:layout_below="@+id/text_title"
         android:layout_marginTop="@dimen/bu2"
         android:orientation="horizontal">
 
@@ -44,5 +45,4 @@
             android:textSize="@dimen/text_size_40px" />
     </LinearLayout>
 
-
-</LinearLayout>
+</RelativeLayout>
