--- a/app/src/main/res/layout/dialog_song.xml
+++ b/app/src/main/res/layout/dialog_song.xml
@@ -1,15 +1,15 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    android:orientation="vertical"
     android:padding="@dimen/bu1">
 
     <TextView
         android:id="@+id/text_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+        android:layout_centerHorizontal="true"
         android:textColor="@color/colorPrimary"
         android:textSize="@dimen/text_size_40px" />
 
@@ -17,6 +17,7 @@
         android:id="@+id/field_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/text_title"
         android:layout_marginTop="@dimen/bu1"
         android:hint="@string/song_dialog_hint_title"
         android:imeOptions="actionNext"
@@ -29,6 +30,7 @@
         android:id="@+id/field_author"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/field_title"
         android:hint="@string/song_dialog_hint_author"
         android:imeOptions="actionDone"
         android:inputType="textCapWords"
@@ -37,17 +39,21 @@
         android:textSize="@dimen/text_size_30px" />
 
     <TextView
+        android:id="@+id/text_key"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+        android:layout_below="@+id/field_author"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/bu1"
         android:text="@string/song_dialog_text_key"
         android:textColor="@color/black"
         android:textSize="@dimen/text_size_30px" />
 
     <RelativeLayout
+        android:id="@+id/view_keys"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/text_key"
         android:layout_marginTop="@dimen/bu0_25">
 
         <View
@@ -80,10 +86,10 @@
         android:id="@+id/button_ok"
         android:layout_width="match_parent"
         android:layout_height="@dimen/bu4"
+        android:layout_below="@+id/view_keys"
         android:layout_marginTop="@dimen/bu1"
         android:background="@drawable/selector_button_generic"
         android:text="@string/button_ok"
         android:textColor="@color/white"
         android:textSize="@dimen/text_size_40px" />
-
-</LinearLayout>
+</RelativeLayout>
