--- a/app/src/main/res/menu/menu_song_activity.xml
+++ b/app/src/main/res/menu/menu_song_activity.xml
@@ -1,4 +1,3 @@
-
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,17 +9,27 @@
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/action_add_audio_file"
-        android:title="@string/song_activity_menu_add_audio_file"
-        app:showAsAction="never" />
-
-    <item
-        android:id="@+id/action_remove_audio_file"
-        android:title="@string/song_activity_menu_remove_audio_file"
+        android:id="@+id/action_share"
+        android:title="@string/song_activity_menu_share"
+        android:icon="@drawable/icon_share2"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/action_customize"
         android:title="@string/song_activity_menu_customize"
+        android:icon="@drawable/icon_customize"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_add_audio_file"
+        android:title="@string/song_activity_menu_add_audio_file"
+        android:icon="@drawable/icon_share2"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_remove_audio_file"
+        android:title="@string/song_activity_menu_remove_audio_file"
+        android:icon="@drawable/icon_share2"
+        app:showAsAction="never" />
+
 </menu>
