--- a/app/src/main/res/menu/menu_main_activity.xml
+++ b/app/src/main/res/menu/menu_main_activity.xml
@@ -15,5 +15,6 @@
     <item
         android:id="@+id/action_settings"
         android:title="@string/main_activity_menu_settings"
+        android:icon="@drawable/icon_settings"
         app:showAsAction="never" />
 </menu>
