--- a/app/src/main/res/menu/menu_song_activity.xml
+++ b/app/src/main/res/menu/menu_song_activity.xml
@@ -23,13 +23,13 @@
     <item
         android:id="@+id/action_add_audio_file"
         android:title="@string/song_activity_menu_add_audio_file"
-        android:icon="@drawable/icon_share2"
+        android:icon="@drawable/icon_add_song"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/action_remove_audio_file"
         android:title="@string/song_activity_menu_remove_audio_file"
-        android:icon="@drawable/icon_share2"
+        android:icon="@drawable/icon_remove_song"
         app:showAsAction="never" />
 
 </menu>
