--- a/app/src/main/res/layout/activity_qa.xml
+++ b/app/src/main/res/layout/activity_qa.xml
@@ -403,6 +403,50 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="@dimen/bu2"
+                android:text="@string/qa_activity_text_m_sharing"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_size_48px"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/bu1"
+                android:text="@string/qa_activity_text_q_share"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_size_36px"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/qa_activity_text_a_share"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_size_30px"
+                android:textStyle="italic" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/bu1"
+                android:text="@string/qa_activity_text_q_import"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_size_36px"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/qa_activity_text_a_import"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_size_30px"
+                android:textStyle="italic" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/bu2"
                 android:text="@string/qa_activity_text_m_troubleshooting"
                 android:textColor="@color/black"
                 android:textSize="@dimen/text_size_48px"
