Finished notes shifting

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,10 +10,10 @@
     <color name="dark_red_30">#4D3C010B</color>
     <color name="dark_red_50">#803C010B</color>
     <color name="black_30">#4A000000</color>
-    <color name="black">#000000</color>
+    <color name="black">#1A2634</color>
     <color name="purple">#8832ba</color>
     <color name="dark_purple">#642589</color>
-    <color name="red">#FF0000</color>
+    <color name="red">#d11030</color>
     <color name="blue">#0000FF</color>
     <color name="greyAA">#AAAAAA</color>
     <color name="greyCC">#CCCCCC</color>
