--- a/app/src/main/res/menu/menu_song_activity.xml
+++ b/app/src/main/res/menu/menu_song_activity.xml
@@ -33,14 +33,8 @@
         app:showAsAction="never" />
 
     <item
-        android:id="@+id/action_increase_octave"
-        android:title="@string/song_activity_menu_increase_octave"
-        android:icon="@drawable/icon_remove_song"
-        app:showAsAction="never" />
-
-    <item
-        android:id="@+id/action_decrease_octave"
-        android:title="@string/song_activity_menu_decrease_octave"
+        android:id="@+id/action_shift_notes"
+        android:title="@string/song_activity_menu_shift_notes"
         android:icon="@drawable/icon_remove_song"
         app:showAsAction="never" />
 
